Revert "upgrade to jdk-16"
This reverts commit cbd9ba10aa635ad7830d5e15fb4086703974dd49.